# pe_array_sim

./: CMakeLists.txt
inc/: pe_array.h  pe_array_area_estimate.h  pe_array_area_model.h  pe_array_cfg.h  pe_array_files.h  pe_array_model.h  pe_array_util.h
rtl/: delay.sv  pe.sv  pe_a10_adder1.sv  pe_a10_adder_tree.sv  pe_accum.sv  pe_accum_blockfp_alm.sv  pe_accum_blockfp_dsp.sv  pe_accum_fixed.sv  pe_array.sv  pe_dot.sv  pe_dot_adder_tree.sv  pe_dot_alm.sv  pe_dot_alm_a10_12x12x16.sv  pe_dot_alm_a10_12x12x4.sv  pe_dot_alm_a10_12x12x8.sv  pe_dot_alm_a10_4x4x16.sv  pe_dot_alm_a10_4x4x32.sv  pe_dot_alm_a10_4x4x4.sv  pe_dot_alm_a10_4x4x8.sv  pe_dot_alm_a10_4x5x16.sv  pe_dot_alm_a10_4x5x32.sv  pe_dot_alm_a10_4x5x4.sv  pe_dot_alm_a10_4x5x8.sv  pe_dot_alm_a10_5x4x16.sv  pe_dot_alm_a10_5x4x32.sv  pe_dot_alm_a10_5x4x4.sv  pe_dot_alm_a10_5x4x8.sv  pe_dot_alm_a10_5x5x16.sv  pe_dot_alm_a10_5x5x32.sv  pe_dot_alm_a10_5x5x4.sv  pe_dot_alm_a10_5x5x8.sv  pe_dot_alm_a10_6x6x16.sv  pe_dot_alm_a10_6x6x32.sv  pe_dot_alm_a10_6x6x4.sv  pe_dot_alm_a10_6x6x8.sv  pe_dot_alm_a10_7x7x16.sv  pe_dot_alm_a10_7x7x32.sv  pe_dot_alm_a10_7x7x4.sv  pe_dot_alm_a10_7x7x8.sv  pe_dot_alm_a10_8x8x16.sv  (+49 more)
tests/accuracy/: Makefile  README  main.cpp
tests/simulation/: Makefile  README  killall_modelsim.sh  main.b.cpp  main.cpp  pe_array_tb.sv
util/area_model/: Makefile  README  main.cpp  pe_array_area_model.template.h  run_on_farm.sh
util/gen_alm_dot/: arc_shell.sh  dot_product_a10.sv  dot_product_s10.sv  gen_dots.py  pe_dot_alm.template.sv
util/gen_pe_arrays/: Makefile  README  main.cpp
(+7 files in other folders)
